// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components exercise fields component exercise fields component should render as expected 1`] = `
<div
  className="row"
>
  <div
    className="col"
  >
    <label
      htmlFor="exercise_name_1"
    >
      Name
    </label>
    <input
      id="exercise_name_1"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    className="col"
  >
    <label
      htmlFor="exercise_set_1"
    >
      Set
    </label>
    <input
      id="exercise_set_1"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    className="col"
  >
    <label
      htmlFor="exercise_repetition_1"
    >
      Repetition
    </label>
    <input
      id="exercise_repetition_1"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    className="col"
  >
    <label
      htmlFor="exercise_weight_1"
    >
      Weight
    </label>
    <input
      id="exercise_weight_1"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    className="col"
  >
    <label
      htmlFor="exercise_youtube_1"
    >
      Youtube
    </label>
    <input
      id="exercise_youtube_1"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    className="col"
  >
    <button
      className="remove"
      onClick={[Function]}
      type="button"
    >
      Remove
    </button>
  </div>
</div>
`;

exports[`components exercise fields component should call correct callback after click on remove button 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      1,
    ],
  ],
}
`;

exports[`components new training component new training component should render as expected 1`] = `
<NewTraining
  exerciseList={Array []}
  title=""
>
  <div>
    <h1>
      Register a new training
    </h1>
    <form
      onSubmit={[Function]}
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="title"
        >
          Title
        </label>
        <input
          id="title"
          onChange={[Function]}
          type="text"
          value=""
        />
        <button
          className="add"
          id="add"
          type="button"
        >
          Add Exercise
        </button>
      </div>
      <input
        type="submit"
        value="Register it!"
      />
    </form>
  </div>
</NewTraining>
`;

exports[`components new training component should call correct callback after change title 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Chest",
    ],
  ],
}
`;
